# HPCA-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  results_2060rtx_mergeBatch.txt  results_2060rtx_mergeLarge_naive.txt  results_2060rtx_mergeLarge_thrust.txt  results_2060rtx_mergeLarge_tiled.txt  results_2060rtx_mergeLarge_window.txt  results_2060rtx_sortBatch.txt  todo.md
include/: batch_merge.cuh  batch_merge_tools.hpp  batch_sort.cuh  config.h  cuda_timing.h  diag_search.cuh  partition.cuh  path_merge.cuh  path_merge.hpp  path_merge_tiled.cuh  randomCudaVector.cuh  thrust_merge.cuh  tools.hpp  utils.hpp  wrapper.cuh
ncu-float/: MergeAgent-float-500000000.txt  MergeAgent-thrust.txt  mergeLarge_tiled_k.txt  mergeLarge_window_k.txt  merge_k_gpu_window-float-500000000.txt  merge_k_gpu_window-float.txt  ncu-merge_k_blocked_float.txt  ncu-merge_k_gpu_squares_coalesced-float.txt  ncu-merge_k_gpu_squares_float.txt  ncu-partition_k_gpu_float.txt  ncu-partitioner_float.txt
ncu-int/: MergeAgent(-100k,100k).txt  MergeAgent(-1k,1k).txt  MergeAgent(INT_MIN,INT_MAX).txt  MergeAgent-int-500000000.txt  MergeAgent.txt  ParallelForAgent(-100k,100k).txt  ParallelForAgent(-1k,1k).txt  ParallelForAgent(INT_MIN,INT_MAX).txt  ParallelForAgent-int-500000000.txt  ParallelForAgent.txt  PartitionAgent(-100k,100k).txt  PartitionAgent(-1k,1k).txt  PartitionAgent(INT_MIN,INT_MAX).txt  PartitionAgent-int-500000000.txt  PartitionAgent.txt  merge_k_gpu_serial_tile_shared(INT_MIN,INT_MAX).txt  merge_k_gpu_window(-100k,100k).txt  merge_k_gpu_window(-1k,1k).txt  merge_k_gpu_window-int.txt  (+7 more)
(+9 files in other folders)
